updated README, fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,11 @@ li {
 	visibility: hidden;
 }
 
+.footer {
+	margin-top: 30px;
+	font-size: 12px;
+}
+
 @media (max-width: 768px) {
 	.main-container {
 		flex-direction: column;
